--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       Speech Draw
     </title>
 
-    <link href="//www.google.com/images/icons/product/chrome-32.png" rel="icon" type="image/ico">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel=
     "stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -92,15 +91,15 @@
 	}
 	
 	.pen {
-		background-image: url(pen.gif);
+		background-image: url(http://www.michaelashton.com.au/x/pen.gif);
 	}
 	
 	.up {
-	background-image: url(up.gif);
+	background-image: url(http://www.michaelashton.com.au/x/up.gif);
 	}
 	
 	.erase {
-		background-image: url(erase.gif);
+		background-image: url(http://www.michaelashton.com.au/x/erase.gif);
 	}
     #copy > div {
     display: none;
@@ -152,7 +151,7 @@ a.c1 {font-weight: normal;}
         </div>
         <div id="div_start">
           <button id="start_button" onclick="startButton(event)"><img alt="Start" id="start_img"
-          src="mic.gif"></button>
+          src="http://www.michaelashton.com.au/x/mic.gif"></button>
         </div>
         <div id="results">
           <span class="final" id="final_span"></span> <span class="interim" id=
@@ -606,17 +605,17 @@ if (!('webkitSpeechRecognition' in window)) {
   recognition.onstart = function() {
     recognizing = true;
     showInfo('info_speak_now');
-    start_img.src = 'mic-animate.gif';
+    start_img.src = 'http://www.michaelashton.com.au/x/mic-animate.gif';
   };
 
   recognition.onerror = function(event) {
     if (event.error == 'no-speech') {
-      start_img.src = 'mic.gif';
+      start_img.src = 'http://www.michaelashton.com.au/x/mic.gif';
       showInfo('info_no_speech');
       ignore_onend = true;
     }
     if (event.error == 'audio-capture') {
-      start_img.src = 'mic.gif';
+      start_img.src = 'http://www.michaelashton.com.au/x/mic.gif';
       showInfo('info_no_microphone');
       ignore_onend = true;
     }
@@ -635,7 +634,7 @@ if (!('webkitSpeechRecognition' in window)) {
     if (ignore_onend) {
       return;
     }
-    start_img.src = 'mic.gif';
+    start_img.src = 'http://www.michaelashton.com.au/x/mic.gif';
     if (!final_transcript) {
       showInfo('info_start');
       return;
@@ -737,7 +736,7 @@ function startButton(event) {
   ignore_onend = false;
   final_span.innerHTML = '';
   interim_span.innerHTML = '';
-  start_img.src = 'mic-slash.gif';
+  start_img.src = 'http://www.michaelashton.com.au/x/mic-slash.gif';
   showInfo('info_allow');
   showButtons('none');
   start_timestamp = event.timeStamp;
